AC_PREREQ([2.69])

AC_INIT([libTHB], [0.01], [tharindubathigama@gmail.com])

AC_CONFIG_SRCDIR([THB/list.c])

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_AUX_DIR([build-aux])

AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])

AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])

AM_PROG_AR

LT_INIT

AC_OUTPUT
