AM_CFLAGS = -g -std=c99
AM_LDFLAGS = -g

lib_LTLIBRARIES = libTHB.la

libTHB_la_SOURCES = common.c common.h\
		    list.c list.h\
		    queue.c queue.h\
		    stack.c stack.h\
		    hash_table.c hash_table.h\
		    sort.h sort.c

THB_includedir = $(includedir)/THB

THB_include_HEADERS = list.h\
			 queue.h\
			 stack.h\
			 hash_table.h\
			 sort.h
