AM_CFLAGS = -g3 -O0 -std=gnu99
AM_LDFLAGS = -g3 -O0

lib_LTLIBRARIES = libal.la

libal_la_SOURCES = common.c common.h\
		    list.c list.h\
		    queue.c queue.h\
		    stack.c stack.h\
		    hash_table.c hash_table.h\
		    sort.h sort.c\
			bst.h bst.c\
			rbt.h rbt.c

al_includedir = $(includedir)/al

al_include_HEADERS = list.h\
			 queue.h\
			 stack.h\
			 hash_table.h\
			 sort.h\
			 bst.h\
			 rbt.h
